--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ section,
 
 main {
   gap: 64px;
+  padding-bottom: 64px;
 }
 
 section {
@@ -65,7 +66,11 @@ nav {
   display: flex;
   align-items: center;
   gap: 32px;
+}
+
+nav a {
   cursor: pointer;
+  text-decoration: none;
 }
 
 nav a:hover {
@@ -129,6 +134,7 @@ nav a:hover {
   cursor: pointer;
   width: fit-content;
   margin-right: auto;
+  text-decoration: none;
 }
 
 .outreach:hover {
@@ -142,7 +148,7 @@ nav a:hover {
 .project-container {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 48px;
 }
 
 .header-text {
@@ -159,10 +165,44 @@ nav a:hover {
   display: flex;
   flex-direction: column;
   gap: 14px;
+  flex: 1;
 }
 
-.project-item div:last-child {
+.project-item > div:last-child {
   aspect-ratio: 16 / 9;
+  max-width: 30%;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.project-item > div:last-child img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.link-container {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.link-item {
+  display: flex;
+  flex-direction: row !important;
+  align-items: center;
+  gap: 14px !important;
+  color: var(--primary-color);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.link-item:hover {
+  opacity: 0.7;
+}
+
+.link-item p {
+  font-size: 0.9em;
 }
 
 @media (min-width: 640px) {
