--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #adf0d4;
-  --secondary-color: #1fd8a4;
+  --primary-color: #c4d9ff;
+  --secondary-color: #e8f9ff;
   --bg-color: #0d1512;
 }
 
@@ -69,13 +69,15 @@ nav {
 }
 
 nav a,
-.instagram {
+.instagram,
+.anchor-text {
   cursor: pointer;
   text-decoration: none;
 }
 
 nav a:hover,
-.instagram:hover {
+.instagram:hover,
+.anchor-text:hover {
   opacity: 0.7;
 }
 
@@ -171,6 +173,7 @@ nav a:hover,
 
 .project-item {
   display: flex;
+  flex-direction: column;
   align-items: stretch;
   gap: 24px;
 }
@@ -184,9 +187,10 @@ nav a:hover,
 
 .project-item > div:last-child {
   aspect-ratio: 16 / 9;
-  max-width: 30%;
+  max-width: 100%;
   overflow: hidden;
   border-radius: 8px;
+  order: -1;
 }
 
 .project-item > div:last-child img {
@@ -247,11 +251,44 @@ form {
   align-self: center;
   border: none;
   color: #0d1512;
+  cursor: pointer;
+}
+
+.submitBtn:hover {
+  color: var(--primary-color);
+  padding: 15px;
 }
 
 #msg {
   color: blue;
   display: block;
+}
+
+.project-info {
+  padding-bottom: 20px;
+}
+
+.anchor-text {
+  color: white;
+  font-weight: 600;
+}
+
+.scroll-to-top {
+  font-size: 1.6rem;
+}
+
+.scroll-to-top:hover {
+  color: var(--secondary-color);
+  margin-top: 0;
+}
+
+.fa-arrow-up {
+  padding-top: 10px;
+  margin-bottom: 30px;
+}
+
+.fa-arrow-up:hover {
+  padding-top: 0;
 }
 
 .copyright {
@@ -270,6 +307,19 @@ form {
   .about-me {
     width: 80%;
     margin-right: auto;
+  }
+
+  .project-item {
+    flex-direction: row;
+    margin-bottom: 10px;
+  }
+
+  .project-item > div:last-child {
+    order: 0;
+  }
+
+  .project-item > div:last-child {
+    max-width: 30%;
   }
 
   .submitBtn {
